Shift to going for a search oriented design

--- a/src/modules/app/app.css
+++ b/src/modules/app/app.css
@@ -9,11 +9,7 @@
     bottom: 0;
 }
 
-.leftBar {
-    height: inherit;
-    width: 200px;
-}
-
+/* just this for now */
 .content {
     height: inherit;
     flex-grow: 2;
