--- a/src/modules/app/app.css
+++ b/src/modules/app/app.css
@@ -1,12 +1,13 @@
 
 .appShell {
+    position: fixed;
     display: flex;
     justify-content: flex-start;
-    position:absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    background-color: rgba(200, 200, 200, 0.8);
 }
 
 /* just this for now */
