--- a/src/modules/searchview/search.css
+++ b/src/modules/searchview/search.css
@@ -27,15 +27,16 @@
     height: 50px;
     margin: 20px 0;
     padding: 10px;
+    cursor: pointer;
+}
+
+.cardContainer:hover {
+    background: rgba(100, 150, 200, 0.6);
 }
 
 .cardName {
     font-family: Helvetia Neue, Helvetica, Roboto, Arial, sans-serif;
     font-size: 16px;
     color: white;
-
-}
-
-.cardLink {
 
 }
