--- a/src/modules/app/app.css
+++ b/src/modules/app/app.css
@@ -1,3 +1,6 @@
+*, *:before, *:after {
+    box-sizing: border-box;
+}
 
 .appShell {
     position: fixed;
@@ -8,10 +11,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(200, 200, 200, 0.8);
-}
-
-/* just this for now */
-.content {
-    height: inherit;
-    flex-grow: 2;
+    /* Typography */
+    font-family: Helvetia Neue, Helvetica, Roboto, Arial, sans-serif;
+    overflow-y: auto;
 }
