--- a/src/modules/searchview/search.css
+++ b/src/modules/searchview/search.css
@@ -13,7 +13,6 @@
     font-size: 30px;
     line-height: 40px;
     padding: 0 10px;
-    font-family: Helvetia Neue, Helvetica, Roboto, Arial, sans-serif;
     border-radius: 10px;
 }
 
@@ -21,22 +20,41 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    flex-direction:column;
     width: 600px;
-    background: rgba(100, 150, 200, 0.8);
     border-radius: 10px;
-    height: 50px;
+    min-height: 70px;
     margin: 20px 0;
     padding: 10px;
     cursor: pointer;
 }
 
-.cardContainer:hover {
-    background: rgba(100, 150, 200, 0.6);
+.cardHeader {
+    height: 30px;
+    width: 100%;
+    color: #FFFFFF;
+    font-size: 16px;
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+    border-radius: 10px 10px 0 0;
+}
+
+.cardBody {
+    background: #FFFFFF;
+    min-height:40px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    border-radius: 0 0 10px 10px;
+}
+
+.cardContainer:hover .cardBody {
+    background: #F0F0F0;
 }
 
 .cardName {
-    font-family: Helvetia Neue, Helvetica, Roboto, Arial, sans-serif;
+    color: #333333;
     font-size: 16px;
-    color: white;
-
 }
