--- a/app/modules/searchview/search.css
+++ b/app/modules/searchview/search.css
@@ -16,6 +16,10 @@
     border-radius: 10px;
 }
 
+.searchInput:focus {
+    outline: none;
+}
+
 .cardContainer {
     display: flex;
     align-items: center;
