Added MVP sidebar
- list all views
- show add view button

TBD:

- Selecting a current view
- Having add view show the "create view page"
- Styling cleanup

--- a/app/modules/app/app.css
+++ b/app/modules/app/app.css
@@ -15,3 +15,16 @@
     font-family: Helvetia Neue, Helvetica, Roboto, Arial, sans-serif;
     overflow-y: auto;
 }
+
+.pageContainer {
+    display: flex;
+    justify-content: flex-start;
+    flex-grow: 1;
+}
+
+.sidebarContainer {
+    display: flex;
+    justify-content: flex-start;
+    width: 150px;
+    flex-shrink:0;
+}
