--- a/app/modules/sidebar/sidebar.css
+++ b/app/modules/sidebar/sidebar.css
@@ -5,12 +5,22 @@
     font-size: 20px;
     text-align: center;
 }
+
+.addViewItemIcon {
+    cursor: pointer;
+}
+
 .viewItem {
     width: 100%;
     height: 40px;
     line-height:40px;
     font-size: 20px;
     text-align: center;
+    cursor: pointer;
+}
+
+.viewItemSelected {
+    background: red;
 }
 
 .sidebar {
